WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60793
Application cache status indicator gets stuck at DOWNLOADING after a failure
https://bugs.webkit.org/show_bug.cgi?id=60793
Summary
Application cache status indicator gets stuck at DOWNLOADING after a failure
Alexey Proskuryakov
Reported
2011-05-13 13:12:59 PDT
Steps to reproduce: 1) Open <
http://nypop.com/~ap/webkit/indicator/test.html
> with Web Inspector being open. 2) In Resources->Application Cache pane, observe that cache status remains DOWNLOADING. This is wrong, because the cache fails to update, and the status is actually UNCACHED. The reason for this is that Inspector is notified about status changes by ApplicationCacheGroup, but ApplicationCacheGroup is not an authority here. ApplicationCacheHost is the class that decides what the current status is.
Attachments
Patch
(49.22 KB, patch)
2011-11-11 04:32 PST
,
Vsevolod Vlasov
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-05-13 13:17:47 PDT
From another point of view, the display is just conceptually incorrect. The Resources pane displays a single (most recent) application cache, but these are not statuses of an application cache. These are statuses of DOMApplicationCache, calculated from cache group update status and DocumentLoader cache association.
Alexey Proskuryakov
Comment 2
2011-05-13 14:07:37 PDT
The status indicator has been hidden in
bug 60799
to avoid confusing developers. I couldn't verify that online indicator also lies, because the underlying functionality is also broken (see
bug 32327
), but it's likely to share the same problem. It got disabled, too.
Michael Nordman
Comment 3
2011-05-16 11:07:24 PDT
(In reply to
comment #1
)
> From another point of view, the display is just conceptually incorrect. > > The Resources pane displays a single (most recent) application cache, but these are not statuses of an application cache. These are statuses of DOMApplicationCache, calculated from cache group update status and DocumentLoader cache association.
> conceptually incorrect
There was some discussion about how appCaches should be represented in the Resources pane. The patch that got committed was not representative of the direction that discussion was headed. Putting one appCache node on the left-hand-side per frame using an appCache within the tab being inspected seemed to be the way to go.
Vsevolod Vlasov
Comment 4
2011-11-11 04:32:16 PST
Created
attachment 114668
[details]
Patch
Vsevolod Vlasov
Comment 5
2011-11-11 10:29:05 PST
Committed
r99988
: <
http://trac.webkit.org/changeset/99988
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug