Application cache status indicator gets stuck at DOWNLOADING after a failure https://bugs.webkit.org/show_bug.cgi?id=60793

Reviewed by Pavel Feldman.

Source/WebCore:

Test: http/tests/inspector/resource-tree/appcache-manifest-with-non-existing-file.html

* inspector/InspectorApplicationCacheAgent.cpp:
(WebCore::InspectorApplicationCacheAgent::InspectorApplicationCacheAgent):
(WebCore::InspectorApplicationCacheAgent::restore):
(WebCore::InspectorApplicationCacheAgent::enable):
* inspector/InspectorApplicationCacheAgent.h:
* inspector/InspectorController.cpp:
(WebCore::InspectorController::InspectorController):
(WebCore::InspectorController::restoreInspectorStateFromCookie):
* inspector/front-end/ApplicationCacheItemsView.js:
(WebInspector.ApplicationCacheItemsView):
(WebInspector.ApplicationCacheItemsView.prototype.updateStatus):

LayoutTests:

* http/tests/inspector/resource-tree/appcache-iframe-manifests-expected.txt:
* http/tests/inspector/resource-tree/appcache-iframe-manifests.html:
* http/tests/inspector/resource-tree/appcache-manifest-with-non-existing-file-expected.txt: Added.
* http/tests/inspector/resource-tree/appcache-manifest-with-non-existing-file.html: Added.
* http/tests/inspector/resource-tree/appcache-test.js: Added.
(createAndNavigateIFrame):
(removeIFrame):
(navigateIFrame):
(initialize_ApplicationCacheTest.InspectorTest.createAndNavigateIFrame.frameNavigated):
(initialize_ApplicationCacheTest.InspectorTest.createAndNavigateIFrame):
(initialize_ApplicationCacheTest.InspectorTest.navigateIFrame.frameNavigated):
(initialize_ApplicationCacheTest.InspectorTest.navigateIFrame):
(initialize_ApplicationCacheTest.InspectorTest.removeIFrame.frameDetached):
(initialize_ApplicationCacheTest.InspectorTest.removeIFrame):
(initialize_ApplicationCacheTest.InspectorTest.dumpApplicationCache):
(initialize_ApplicationCacheTest.InspectorTest.dumpApplicationCacheTree):
(initialize_ApplicationCacheTest.InspectorTest.frameIdToString):
(initialize_ApplicationCacheTest.InspectorTest.applicationCacheStatusToString):
(initialize_ApplicationCacheTest.InspectorTest.dumpApplicationCacheModel.compareFunc):
(initialize_ApplicationCacheTest.InspectorTest.dumpApplicationCacheModel):
(initialize_ApplicationCacheTest.InspectorTest.waitForFrameManifestURLAndStatus):
(initialize_ApplicationCacheTest.InspectorTest.startApplicationCacheStatusesRecording):
(initialize_ApplicationCacheTest.InspectorTest.ensureFrameManifestStatusEventReceived):
(initialize_ApplicationCacheTest.InspectorTest.dumpApplicationCacheStatusesRecords.compareFunc):
(initialize_ApplicationCacheTest.InspectorTest.dumpApplicationCacheStatusesRecords):
(initialize_ApplicationCacheTest):
* http/tests/inspector/resource-tree/resources/manifest.php:
* platform/chromium/http/tests/inspector/resource-tree/appcache-iframe-manifests-expected.txt: Added.
* platform/chromium/http/tests/inspector/resource-tree/appcache-manifest-with-non-existing-file-expected.txt: Added.

Canonical link: https://commits.webkit.org/88548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99988 268f45cc-cd09-0410-ab3c-d52691b4dbfc